err/jsonapi-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jsonapi_client'...
Compiling './lib/python3.5/site-packages/jsonapi_client/common.py'...
***   File "./lib/python3.5/site-packages/jsonapi_client/common.py", line 87
    return f'<{self.__class__.__name__}: {str(self)} ({id(self)})>'
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonapi_client/document.py'...
***   File "./lib/python3.5/site-packages/jsonapi_client/document.py", line 57
    resources: List['ResourceObject']
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonapi_client/filter.py'...
***   File "./lib/python3.5/site-packages/jsonapi_client/filter.py", line 64
    fetch_url = f'{base_url}?{filter_query}'
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonapi_client/objects.py'...
***   File "./lib/python3.5/site-packages/jsonapi_client/objects.py", line 90
    return f'{self.session.server_url}{self.href}'
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonapi_client/relationships.py'...
***   File "./lib/python3.5/site-packages/jsonapi_client/relationships.py", line 70
    self._resources: Dict[Tuple[str, str], ResourceObject] = None
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonapi_client/resourceobject.py'...
***   File "./lib/python3.5/site-packages/jsonapi_client/resourceobject.py", line 77
    self._schema: 'Schema' = resource.session.schema
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsonapi_client/session.py'...
***   File "./lib/python3.5/site-packages/jsonapi_client/session.py", line 126
    self._server: ParseResult
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/jsonapi_client-0.9.6.dist-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
